yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
      - webserver.k8s.info
    secretName: ingress-local-tls-minica
  rules:
  - host: webserver.k8s.info
    http:
     paths:
     - path: /
       pathType: Prefix
       #pathType: ImplementationSpecific
       backend:
         service:
           name: nginx
           port:
             name: nginx
